<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_style"
    android:orientation="vertical"

    >

    <ImageView
        android:id="@+id/closeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:src="@drawable/close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/request_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_weight="1"
                android:text="@string/request_info_ar"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/edit_text_back">


            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="left|top"
                android:hint="@string/messge"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColorHint="#d1d1d1"
                android:textStyle="bold" />


        </LinearLayout>


        <Button
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="#3C3C3B"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>
    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:background="#3E80B4"-->
    <!--android:orientation="horizontal" >-->

    <!--<Button-->
    <!--android:id="@+id/btn_yes"-->
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:background="@android:color/white"-->
    <!--android:clickable="true"-->
    <!--android:text="Yes"-->
    <!--android:textColor="#5DBCD2"-->
    <!--android:textStyle="bold" />-->

    <!--<Button-->
    <!--android:id="@+id/btn_no"-->
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_marginLeft="5dp"-->
    <!--android:background="@android:color/white"-->
    <!--android:clickable="true"-->
    <!--android:text="No"-->
    <!--android:textColor="#5DBCD2"-->
    <!--android:textStyle="bold" />-->
    <!--</LinearLayout>-->

</LinearLayout>