<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/dialog_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp">

            <ImageView
                android:id="@+id/tip_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                 />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tip_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/reversed_comma"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tip_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:paddingLeft="7dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/comma"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/more_tips"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="@string/more"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="@android:color/black"

            />

    </LinearLayout>

</LinearLayout>