<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/click_menu"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_transparent"
        android:text="" />

    <Button
        android:id="@+id/click_notify"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_transparent"
        android:text="" />


    <Button
        android:id="@+id/click_back"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_transparent"
        android:text="" />

    <Button
        android:id="@+id/click_home"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_transparent"
        android:text="" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/home_menu_layoutss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#7f000000"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="80dp"
            android:background="@drawable/home_menu">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_menu_name"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/user"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/home_user_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/home_menu_feedback"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/feedback"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/home-feedback_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/home_menu_about_us"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/home_about_us_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/home_menu_contact_us"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/contact_us"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/home_contact_us_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15sp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/home_menu_join_team"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/join_our_team"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/home_join_team_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/home_menu_sign_out"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/signout"
                    android:textColor="#000000"
                    android:textStyle="bold" />


            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>




