<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:tag="cards main container"
    tools:context=".MainSecondShooterActivity">


    <FrameLayout
        android:id="@+id/about_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:src="@drawable/second_shooter_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_style">

                    <mahmoudvic.org.phomunity.fonts.CustomTextView
                        android:textSize="20sp"
                        android:id="@+id/assistant_textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/search_assistant"

                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_style">

                    <mahmoudvic.org.phomunity.fonts.CustomTextView
                        android:textSize="20sp"
                        android:id="@+id/seconshooter_textview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/search_secondshooter"

                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:weightSum="2">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_style">

                    <mahmoudvic.org.phomunity.fonts.CustomTextView
                        android:id="@+id/register_assistant_textview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"
                        android:text="@string/register_assistant"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_style">

                    <mahmoudvic.org.phomunity.fonts.CustomTextView
                        app:font_name="ambleBold"
                        android:id="@+id/register_secondshooter_textview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:text="@string/register_secondshooter"

                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/second_shooter_foote" />
    </LinearLayout>
</LinearLayout>
